--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://galrothschild.github.io/ReactBusinessCard",
   "name": "business-cards",
   "version": "0.1.0",
   "private": true,
