--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     ]
   },
   "devDependencies": {
+    "@types/redux-persist": "^4.3.1",
+    "redux-persist": "^6.0.0",
     "tailwindcss": "^3.4.1"
   }
 }
