--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.5.3",
     "@types/redux-persist": "^4.3.1",
     "redux-persist": "^6.0.0",
     "tailwindcss": "^3.4.1"
