--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   },
   "devDependencies": {
     "@types/redux-persist": "^4.3.1",
+    "react-window": "^1.8.10",
     "redux-persist": "^6.0.0",
     "tailwindcss": "^3.4.1"
   }
