--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
-    "react-window": "^1.8.10",
+    "react-viewport-list": "^7.1.2",
     "redux-persist": "^6.0.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
